add report product top

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,7 @@ api.key.usuarios=ecomarket1554
 api.key.productos=ecomarket1554
 api.key.inventario=ecomarket1554
 
+url.api.detallepedidos=http://localhost:8082/api/v1/pedidos/detalles
+
 url.api.pedidos=http://localhost:8082/api/v1/pedidos
 api.key.pedidos=ecomarket1554
