--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
   <artifactId>osdt_cert</artifactId>
   <version>19.8.0.0</version>
 </dependency>
+
+<!-- swagger -->
+<dependency>
+  <groupId>org.springdoc</groupId>
+  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+  <version>2.3.0</version>
+</dependency>
 </dependencies>
 
 	<build>
